<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dsm.restaurant.presentation.ui.register.RegisterViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_register1_restaurant_image"
                image="@{viewModel.imageUrl}"
                android:layout_width="0dp"
                android:layout_height="132dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="25dp"
                android:background="#E0E0E0"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_register1_restaurant_image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_image"
                android:textColor="@color/colorGrey"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="@{(viewModel.imageUrl.empty &amp;&amp; !viewModel.isUploadingImage) ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@id/iv_register1_restaurant_image"
                app:layout_constraintLeft_toLeftOf="@id/iv_register1_restaurant_image"
                app:layout_constraintRight_toRightOf="@id/iv_register1_restaurant_image"
                app:layout_constraintTop_toTopOf="@id/iv_register1_restaurant_image" />

            <ProgressBar
                android:id="@+id/pb_register1_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isUploadingImage ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@id/iv_register1_restaurant_image"
                app:layout_constraintLeft_toLeftOf="@id/iv_register1_restaurant_image"
                app:layout_constraintRight_toRightOf="@id/iv_register1_restaurant_image"
                app:layout_constraintTop_toTopOf="@id/iv_register1_restaurant_image" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_register1_restaurant_name"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_edittext_register"
                android:drawableStart="@drawable/ic_restaurant_grey_24dp"
                android:drawableLeft="@drawable/ic_restaurant_grey_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/restaurant_name"
                android:nextFocusDown="@id/et_register1_phone"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="18dp"
                android:paddingRight="18dp"
                android:singleLine="true"
                android:text="@={viewModel.restaurantName}"
                android:textColorHint="@color/colorGrey"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_register1_left"
                app:layout_constraintRight_toRightOf="@id/gl_register1_right"
                app:layout_constraintTop_toBottomOf="@id/iv_register1_restaurant_image"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_register1_phone"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext_register"
                android:digits="0123456789"
                android:drawableStart="@drawable/ic_register_phone_grey_24dp"
                android:drawableLeft="@drawable/ic_register_phone_grey_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="18dp"
                android:paddingRight="18dp"
                android:singleLine="true"
                android:text="@={viewModel.phoneNum}"
                android:textColorHint="@color/colorGrey"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_register1_left"
                app:layout_constraintRight_toRightOf="@id/gl_register1_right"
                app:layout_constraintTop_toBottomOf="@id/et_register1_restaurant_name"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btn_register1_select_address"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_primary_light"
                android:text="@string/select_location"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/gl_register1_left"
                app:layout_constraintRight_toRightOf="@id/gl_register1_right"
                app:layout_constraintTop_toBottomOf="@id/et_register1_phone" />

            <TextView
                android:id="@+id/tv_register1_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:maxLines="3"
                android:text="@{viewModel.address}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_register1_left"
                app:layout_constraintRight_toRightOf="@id/gl_register1_right"
                app:layout_constraintTop_toBottomOf="@id/btn_register1_select_address" />

            <TextView
                android:id="@+id/tv_register1_default_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="16sp"
                android:text="@string/default_location"
                android:textColor="@android:color/black"
                android:visibility="@{viewModel.address.empty ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@id/tv_register1_address"
                app:layout_constraintLeft_toLeftOf="@id/tv_register1_address"
                app:layout_constraintRight_toRightOf="@id/tv_register1_address"
                app:layout_constraintTop_toTopOf="@id/tv_register1_address" />

            <mabbas007.tagsedittext.TagsEditText
                android:id="@+id/et_register1_area"
                tags="@{viewModel.area}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="42dp"
                android:hint="@string/possible_area"
                android:textColorHint="@color/colorGrey"
                android:textSize="16sp"
                app:allowSpaceInTag="true"
                app:layout_constraintBottom_toTopOf="@id/btn_register1_next"
                app:layout_constraintLeft_toLeftOf="@id/gl_register1_left"
                app:layout_constraintRight_toRightOf="@id/gl_register1_right"
                app:layout_constraintTop_toBottomOf="@id/tv_register1_address"
                app:tagsBackground="@drawable/bg_tag"
                app:tagsCloseImageRight="@drawable/ic_close_white_15dp"
                app:tagsPaddingLeft="4dp"
                app:tagsPaddingRight="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_divide_by_enter"
                android:textColor="@color/colorGrey"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/et_register1_area"
                app:layout_constraintLeft_toLeftOf="@id/gl_register1_left"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/btn_register1_next"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="24dp"
                android:background="@{viewModel.isNext1Clickable ? @drawable/bg_button_enable : @drawable/bg_button_disable}"
                android:clickable="@{viewModel.isNext1Clickable}"
                android:text="@string/next"
                android:textColor="@{viewModel.isNext1Clickable ? @color/colorPrimaryLight : @color/colorGrey}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/gl_register1_left"
                app:layout_constraintRight_toRightOf="@id/gl_register1_right" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_register1_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                app:layout_constraintGuide_begin="60dp"
                tools:ignore="RtlSymmetry" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_register1_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="60dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>