...
        android:id="@+id/register1Fragment"
        android:name="com.dsm.account.Register1Fragment">
        <action
            android:id="@+id/action_register1Fragment_to_register2Fragment"
            app:destination="@id/register2Fragment" />
        <action
            android:id="@+id/action_register1Fragment_to_addressSearchFragment"
            app:destination="@id/addressSearchFragment" />
    </fragment>
    <fragment
        android:id="@+id/register2Fragment"
        android:name="com.dsm.account.Register2Fragment">
        <action
...
